2008-12-02 Rohit
 * Added support for Monochrome ICC profile apply

2008-11-24
 * Cleanup of build files for Linux

2008-10-31
 * Added fix to make CIccCmmMRU work after chages to add CIccApplyCmm architecture

2008-10-15
 * Added support for External extension of CIccTags and CIccMPE objects
 * Make CIccMultiProcessElement::m_nReserved public
 * Added CIccMpeUnknown:SetType() and CIccMpeUnknown::SetChannels() to allow unknown elements to be externally created
 * CIccCLUT::Init() now returns bool to indicate allocation failure
 * Added icDeltaE() funciton to IccUtil.cpp
 * Modified MPE Sampled Curve to conform to specification.  First point is NOT stored in file.
 * Fixed MPE processing to not Clip PCS or apply Absolute Rendering Intent adjustments.
 * Added support for selective use of MPE tags in iccApplyNamedCmm.cpp
 * Modified IccV4ToMPE to correctly create SampledCurve segments by not saving first point.
 * wxProfileDump now supports option to perform round trip performance analysis.
 
2007-11-21 Max Derhak
 * Addition of CIccXformCreator singleton factory and IIccXformFactory interface for dynamic
   creation of CIccXform objects based upon xform type.   With a IIccXformFactory  derived
   object properly registered using CIccXformCreator::PushFactory() overlaoded CIccXform objects
   seemleessly get created and applied.
   
2007-10-08 Max Derhak
  * Fixed memory leak in CIccProfile copy constructor and copy methods
  * Added CIccEvalCompare object that can be derived from to perform round trip analysis.
  * Added iccRoundTrip command line tool that performs round trip analysis of ICC profiles.

2007-09-25
  * Fixed bug in Tetrahedtral Interpolation for 3 dimensionial input as identified
    by George Pawle

2007-08-20
  * Fixed bug in MPE Formula Curve parameter checking.
  * MPE Formula Curve type 0001h used base 10 log function.
  * Registered CMM signatures recognized and displayed correctly.
  * Unknown platform type added (00000000h). 
